--- a/数学物理方法/一、向量分析/1.2 坐标轴的旋转.md
+++ b/数学物理方法/一、向量分析/1.2 坐标轴的旋转.md
@@ -110,6 +110,11 @@ $$\sum_{i} \frac{\partial x_{j}}{\partial x_{i}^{\prime}} \frac{\partial x_{k}}{
 $\delta_{jk}$ 仅在 $k=j$ 时非零，所以：$$
 \sum_{k=1}^N \delta_{jk} x_j x_k = x_j x_j = x_j^2.$$于是：$$
 \sum_{i=1}^N (x_i')^2 = \sum_{j=1}^N x_j^2.$$
+（b）在给定点 $(x,y)$ 处，$\boldsymbol{A}$ 定义了相对于正 $x$ 轴的角度 $α$ 和相对于正 $x'$ 轴的角度 $α'$。从 $x$ 到 $x'$ 的角度为 $\varphi$。证明当 $\boldsymbol{A}=\boldsymbol{A}'$ 时，无论用带撇分量还是不带撇分量表示，$\boldsymbol{A}$ 在空间中定义的方向相同；也就是说，$$\alpha'=\alpha - \varphi$$
+
+
+
+
 
 
 \boldsymbol{A}
