--- a/理论物理/任延宇/1-4.md
+++ b/理论物理/任延宇/1-4.md
@@ -83,7 +83,7 @@
 
 最后一个部分就是讨论我们为什么要学好这门课程，那首先我们来探讨一下这个学好是什么意思，同学们可能还能够想起我们刚刚讲过的，讲的只是如何学好这门课程的知识，并没有教你如何去拿到学分，关于我们这门课的评分标准，会以书面的形式在课程介绍中体现，我们不在这里专门讲解，也就是我们再次关心的，是你如何能学到这门课程的知识，进而有所收获和感悟。
 
-我们最后一部分就是告诉你，这些收获和感悟 即便刨去成绩和学分，对你来讲一定是合算的，只不过为了能够说明这一点，我们没有办法在这里去讲，只能把它放到我们整个课程的最后，因为我们这个课的特点，不同于比方说工程类的理论力学，这门课我所讲的知识很难立竿见影的应用到实际工程或者是实践中，只有你全学完了这门课之后，才有资格说这门课到底是有用还是没用。
+我们最后一部分就是告诉你，这些收获和感悟，即便刨去成绩和学分，对你来讲一定是合算的，只不过为了能够说明这一点，我们没有办法在这里去讲，只能把它放到我们整个课程的最后，因为我们这个课的特点，不同于比方说工程类的理论力学，这门课我所讲的知识很难立竿见影的应用到实际工程或者是实践中，只有你全学完了这门课之后，才有资格说这门课到底是有用还是没用。
 
 当然我也会讲好今后的每一次课，争取让同学们不对它感到失望。正像我们一开始所说：世之奇伟瑰怪，非常之观，常在于险远，而人之所罕至焉，故非有志者不能至也。好，现在就请我们一同进入这门课程的学习中。
 
