--- a/理论物理/任延宇/理论力学.md
+++ b/理论物理/任延宇/理论力学.md
@@ -108,9 +108,11 @@ $$\vec{r}=r\vec{e}_r$$
 
 这个道理，我可以简单的跟同学们说明一下，因为我们对于力学的研究只涉及到加速度，也就是速度对时间的导数，其实从数学上，加速度还可以对时间求导数，对于真正的三维的情况，加速度对时间的导数就不再是只有两个分量，它的第三个，也就是副法线的方向，这个分量有可能不等于零，这个就会影响空间曲线上的一个非常重要的参量，叫所谓的挠率，就是挠痒痒的挠，这个参量就会导致这个曲线偏离原来的平面，当然这个我们课堂上并不要求，只是回答同学们可能产生的疑问罢了，好，我们今天对于自然坐标系就介绍到这里。
 
+## 七、牛顿运动定律
 
+牛顿运动定律
 
-
+各位同学们好 这堂课我们来讲著名的牛顿运动定律 提起牛顿的三定律 我想每一个同学都不陌生 我们不仅在小学中学学过 在我们大一的普通物理力学课里也一定讲过 而在我们的理论力学课里 还要给大家讲牛顿三定律 当然在这里 我们仅就一些容易混淆的概念 给同学们一些提示 那么我们首先来看一下 所谓的牛顿三定律里的第一个 也就是著名的惯性定律 它是说如果一个物体不受外力作用 它将保持静止或者匀速运动状态 换句话说 牛顿第一定律为我们提供了一个参考系 也就是所谓的惯性参考系 以此为基础 牛顿又给出了他的著名的第二定律 这也是我们解题的时候最常用的一个运动定律 那么牛顿第二定律同学们都非常熟悉 那么它的一个直接的表达式 就是F等于ma 在这里 我给出它另外一个更加原本的表示式 因为我们都知道 动量的定义是质量乘上速度 那么把它代入的话 你就可以得到所谓的动量定理 也就是F等于dp比上dt 实际上牛顿他本人一开始在他的原著里 给出的第二定律 就是这样一个形式 只不过后来 人们为了计算起来 更加直接方便一些 更多的采用F等于ma 可是历史告诉我们的是 当人们进入相对论领域时 牛顿他原本的牛顿第二定律 仍然是适用的 可是后来我们经常用的F等于ma 就不能再使用 这也令我们不得不感叹牛顿的伟大之处 那么此外
 
 
 
@@ -425,7 +427,4 @@ P50 平面转动坐标系例题
 各位同学们好 在今天的课程里 我们来学习如何利用拉格朗日方程 去解实际的问题 我们先来看一个非常典型的题目 这个题目应该很多同学在牛顿力学里都做过 具体的看一下 这个系统里我们关心两个物体 一和二 其中一是一个直点 二是一个斜坯 所有的接触都是光滑接触 现在我们让物体一也就是这个直点 沿着这个斜坯自由滑下 然后这个题目是让我们来求 直点和坯水平方向上的加速度 为了方便对比 我们这道题目将同时采用 牛顿力学和分析力学来处理 首先我们简单回顾一下 牛顿力学是如何来处理这道问题的 对于牛顿力学来讲 第一步当然是选择参考系与坐标系 我们这里写了一个笛卡尔坐标系 假定坐标系的原点O是不动的 也就是说这个坐标系是一个惯性系 接下来来做受力分析 我们所关心的物体一只受两个力 一个是重力 一个是约束力 也就是P给它的支持力 我们用R来表示 有了力之后 利用牛顿第二定律 原则上我们是可以得到加速度的 但是不要高兴太早 因为这里边的力有一个约束力 也就是R 它的大小实际是未知的 这是许多约束力的一个典型特点 就是有未知因素 而这个未知因素是依赖于我们对于系统的理解 依赖于运动规律 因此你要想获得R的信息 必须得把整个系统的运动过程在脑子里边过一遍 比如说现在这个支点一要下滑 受它的影响 物体二也不会静止不动 它会向后运动 它们俩之间的运动关系 有一个动量守恒在维系着 此外我们还知道 一和二是相对运动的 但这个相对运动并非是任意的 它们之间的相对运动 之间的速度关系必须得满足 这个一始终在二上 通过这一系列分析 我们才能继续去做 首先根据水平方向动量守恒 你可以知道一和二水平方向上加速度之间的一个关系 然后把这两个加速度再相减 你就知道了这两个物体之间的相对加速度 当然这个相对加速度的方向 必须跟P这个斜边的方向是一致的 依靠这些条件 我们可以推知这个R具体是多少 然后把这个R的结果再带入到原来的方程里 你就可以得到题目中让我们所求的加速度 这一切看起来都是天经地义的 你想分析一个加速度 当然得求出力 要想求出力解决力学问题 当然得首先来看一下这个物理图像或者物理过程究竟是什么样 但是这所有的一切真的是必须吗 接下来我们就利用分析力学再来解一下这个问题 当然由于我们是第一次利用拉格朗尔方程处理力学问题 这个求解我们将在黑板上进行 好 接下来我们利用刚刚学过的拉格朗尔力学 来处理同样的题目 对于拉格朗尔力学 首先我们可以判断 这个题目它是一个完整理想的系统 下一个步骤就是取广义坐标 对于这个题目 我们的广义坐标实际可以这么来选取 也就是说我们可以取这两个物体的横坐标作为广义坐标 比方说 上面这个小球的横坐标 我们可以取为第一个广义坐标 然后关于下边这个斜P 我们认取一个点 比方说这个点 它的坐标 我们把它写成X2 作为第二个广义坐标 可以验证一下 这是符合广义坐标的定义的 因为这两个坐标一旦确定 这个系统的位形就被完全确定了 比方说X2你一旦确定 下边这个大P的位置就完全固定 X1如果确定 当然首先这个小球它的横坐标被确定 实际它的纵坐标也被确定 因为现在的小球纵坐标Y1 显然应该等于X2-X1 再乘上这个斜P夹角θ的正切 意味着小球的纵坐标也被固定了 接下来下一个程序就是写出它的拉格朗的函数 也就是动能和势能 我们先来看动能 这个系统的动能是两个物体动能之和 也就是说1 2M1 它的速度包括X方向的速度 再加上Y方向的速度平方和 然后加上第二个物体 也就是这个斜P它的动能 加上1 2M2 它只有X方向的速度 X2一点的平方 下面的事情就是想方设法 把这里边出现的坐标 都统一用一开始我们选择的广义坐标来表示 也就是说要把这里的Y给替换掉 这里涉及到把Y1对时间求导数 也就直接在上面加点就可以了 然后这还要取平方 再照抄上第二个物体的动能 接下来再来看势能 势能当然依然是这两部分物体势能的和 第一个物体的势能M1G 然后乘上Y1 表示它的高度 再加上第二个物体的势能 第二个物体的势能 其实你可以发现在整个运动过程中 第二个物体指心的高度没有发生变化 因此第二个物体 也就是这个P间 它的势能可以当做一个常数 它并不重要 然后你把这里的Y1同样道理 用我们选择的广义坐标去代替 其中这个常数部分 在运动方程里不起任何作用 我们其实就可以不用写它 动能势能都有了 接下来我们就可以把它们做差 给出这个系统的拉格朗日函数 它等于动能减势能 接下来的任务就是照抄这两个结果就可以了 然后减去势能 拉格朗日函数写出来之后 代入拉格朗日方程 去做具体的数学上的微积分计算 首先根据我们刚刚学过的 保守系统下的拉格朗日方程 显然现在所有的主动力都是保守力 可以用这个方程去处理问题 好 先有关于第一个广义坐标的拉格朗日方程 然后要做的就是我们把 刚刚写出来的拉格朗日函数 代入到这个方程里去做计算 首先它应该等于对时间的导数 然后我们去算 这个拉格朗日函数 对第一个广义速度的偏导数 看一下这里边含有广义速度的 有这一项和这一项 我们分别来求偏导数 这个的结果是m1乘上x1一点 然后这一项这里有一个负号 然后这个2和前面的1 2消掉 剩下的仍然是m1 x2一点减去x1一点 再乘上后边的常数下 然后它应该等于等号右边 它对第一个广义坐标的偏导数 含有广义坐标的x1只有最后边这一项 求偏导的结果当然应该等于这两个负号消掉 m1g tangency 这样我们就得到了第一个方程 当然接下来你还要做出对时间的导数 也就是说只需要把这里再加一个点就可以了 同样道理我们还可以写出第二个拉格朗的方程 也就是说我们再利用它对时间的导数 然后拉格朗的函数对x2求偏导数 等于它对第二个广义坐标的偏导 然后同样道理你也可以列出如下的结果 比方说这里我们要考虑对第二个广义速度求偏导 含有它的一个是这一项 另外还有这一项 相应求偏导的结果应该等于m1 然后是x2一点 减去x1一点 弹尽的平方θ 再加上这有一个2跟它消掉 m2x2一点 等号右边是把这里对x2求一次偏导数 它等于负的m1g 弹尽的θ 然后你再完成这个对时间的导数 同样道理还是加点 m1x2两点 减去x1两点 θ叫弹尽的平方θ 再加上m2x2两点 等于负m1g弹尽的θ 这个叫做公式二 现在我们观察一下这个公式一和公式二 这里边两个方程两个位置数 正是让我们需要求的x1 x2方向的加速度 因此你把它们连立 当然可以得到最终的结果 比方说你把1和2直接进行相加 等号右边消掉 然后这一项和这一项要消掉 直接得到的就是x1两点和x2两点的一个简单关系 其实就是那个水平方向的动量守恒 然后把这个关系式代入到任何一个 就可以求出最终的结果 那以下具体的计算我们就没有必要去进行了 从这个题目整个计算过程中 同学们不难发现 其实就计算的数学复杂性而言 它跟我们刚刚讲过的牛顿力学的算法相比较 并没有明显的优势 虽然这里边我们没有考虑约束力 但是我们付出的代价也没有办法求出约束力 实际上对于分析力学来讲 这道题好在没有让我们去求约束力 否则那将是一个很麻烦的事情 但尽管如此 分析力学还是体现出来一个非常非常重要的优势 不知道同学们在跟我计算的过程中有没有发现 我们在整个计算过程中 甚至没有对这道题目的物理过程做任何过多的分析 这一点是牛顿力学远远比不了的 我们只是按照流程和手续一步一步走 竟然就把这道题目真正的做出来了 这也意味着 既然我们没有考虑这道题的物理过程 那下一个跟它完全不一样的题 是不是也有可能按照统一的这套流程来做出来呢 如果真的是这样那就太好了 我们就摆脱了牛顿力学对于解题技巧过多的需求 为了证实这一点 下次课我们将换另外一个题目 重新用分析力学去处理 
 
 
-牛顿运动定律
-
-各位同学们好 这堂课我们来讲著名的牛顿运动定律 提起牛顿的三定律 我想每一个同学都不陌生 我们不仅在小学中学学过 在我们大一的普通物理力学课里也一定讲过 而在我们的理论力学课里 还要给大家讲牛顿三定律 当然在这里 我们仅就一些容易混淆的概念 给同学们一些提示 那么我们首先来看一下 所谓的牛顿三定律里的第一个 也就是著名的惯性定律 它是说如果一个物体不受外力作用 它将保持静止或者匀速运动状态 换句话说 牛顿第一定律为我们提供了一个参考系 也就是所谓的惯性参考系 以此为基础 牛顿又给出了他的著名的第二定律 这也是我们解题的时候最常用的一个运动定律 那么牛顿第二定律同学们都非常熟悉 那么它的一个直接的表达式 就是F等于ma 在这里 我给出它另外一个更加原本的表示式 因为我们都知道 动量的定义是质量乘上速度 那么把它代入的话 你就可以得到所谓的动量定理 也就是F等于dp比上dt 实际上牛顿他本人一开始在他的原著里 给出的第二定律 就是这样一个形式 只不过后来 人们为了计算起来 更加直接方便一些 更多的采用F等于ma 可是历史告诉我们的是 当人们进入相对论领域时 牛顿他原本的牛顿第二定律 仍然是适用的 可是后来我们经常用的F等于ma 就不能再使用 这也令我们不得不感叹牛顿的伟大之处 那么此外
 
