--- a/理论物理/朗道/一、力学/第 2 章、守恒定律.md
+++ b/理论物理/朗道/一、力学/第 2 章、守恒定律.md
@@ -154,16 +154,14 @@ M^{2}&=m^{2}r^{2}\dot{\varphi}^{2}\left(r^{2}+z^{2}\right)+m^{2}(r\dot{z}-z\dot{
 \end{align}$$
 **习题 2**：用球坐标 $r, \theta, \varphi$ 中表示质点角动量的笛卡儿坐标分量以及角动量的大小。
 
-**答案：**
-
-
-
-§ 9 角动量
-Mx =— mr2 (0 sincp +妇sin0cos0cos 中），
-My=m 产(e cosrp — <psin0cos0sin 沪，
-Mz= mr译sin2 0,
-矿＝ m2 户（妒＋奇sin20).
-习题3 在下列场中运动时动量P 和角动量M 的哪些分量守恒？
+**答案：** $$\begin{align}
+M_{x}&=-mr^{2}(\dot{\theta}\sin\varphi+\dot{\varphi}\sin\theta\cos\theta\cos\varphi), \\[1.2ex]
+M_{y}&=mr^{2}(\dot{\theta}\cos\varphi-\dot{\varphi}\sin\theta\cos\theta\sin\varphi), \\[1.2ex]
+M_{z}&=mr^{2}\dot{\varphi}\sin ^{2}\theta, \\[1.2ex]
+M^{2}&=m^{2}r^{4}\left(\dot{\theta}^{2}+\dot{\varphi}^{2}\sin ^{2}\theta\right) .
+\end{align}
+$$
+**习题 3**  在下列场中运动时动量P 和角动量M 的哪些分量守恒？
 a. 无限大均匀平面场．
 答案：
 Px,Py,M之（元限大平面为xy 平面）．
