--- a/数学物理方法/一、向量分析/1.2 坐标轴的旋转.md
+++ b/数学物理方法/一、向量分析/1.2 坐标轴的旋转.md
@@ -111,10 +111,23 @@ $\delta_{jk}$ 仅在 $k=j$ 时非零，所以：$$
 \sum_{k=1}^N \delta_{jk} x_j x_k = x_j x_j = x_j^2.$$于是：$$
 \sum_{i=1}^N (x_i')^2 = \sum_{j=1}^N x_j^2.$$
 （b）在给定点 $(x,y)$ 处，$\boldsymbol{A}$ 定义了相对于正 $x$ 轴的角度 $α$ 和相对于正 $x'$ 轴的角度 $α'$。从 $x$ 到 $x'$ 的角度为 $\varphi$。证明当 $\boldsymbol{A}=\boldsymbol{A}'$ 时，无论用带撇分量还是不带撇分量表示，$\boldsymbol{A}$ 在空间中定义的方向相同；也就是说，$$\alpha'=\alpha - \varphi$$
+**1.2.2** 证明正交条件 $\sum_{i}a_{ji}a_{ki}=\delta_{jk}$，作为这一条件的特例，1.1 节中的方向余弦满足关系式$$\cos^2\alpha+\cos^2\beta+\cos^2\gamma=1$$这一结果同样由方程（1.6）得出。
 
 
+**答：** 由于旋转并不会改变向量的长度和相互间的夹角，新旧坐标系的基向量都满足正交归一条件：  $$
+\mathbf{e}'_j \cdot \mathbf{e}'_k = \delta_{jk}$$根据公式 (1.14) 把 $\mathbf{e}'_j)$ 和 $\mathbf{e}'_k)$ 展开：$$
+\mathbf{e}'_j \cdot \mathbf{e}'_k =  
+\left( \sum_i a_{ji}\, \mathbf{e}_i \right)  
+\cdot  
+\left( \sum_m a_{km}\, \mathbf{e}_m \right)  
+= \sum_{i,m} a_{ji}a_{km}(\mathbf{e}_i\cdot\mathbf{e}_m)  $$而 $\mathbf{e}_i \cdot \mathbf{e}_m = \delta_{im}$，因此：$$
+\mathbf{e}'_j \cdot \mathbf{e}'_k = \sum_i a_{ji}a_{ki}$$根据前面的正交归一条件 $\mathbf{e}'_j \cdot \mathbf{e}'_k = \delta_{jk}$，就得到：$$
+\boxed{\sum_i a_{ji}a_{ki} = \delta_{jk}}  $$这就是正交条件。
 
 
+设我们只取新坐标系中的一个轴（比如 $x'$ 轴），它相对于旧坐标系的三个轴的方向余弦分别为：$$
+\cos\alpha = a_{11}, \quad \cos\beta = a_{12}, \quad \cos\gamma = a_{13}  $$此时，($j=k=1$)，代入上式：  $$
+\sum_i a_{1i} a_{1i} = \delta_{11} = 1$$展开：  $a_{11}^2 + a_{12}^2 + a_{13}^2 = 1$  即：  $$
+\boxed{\cos^2\alpha + \cos^2\beta + \cos^2\gamma = 1}  $$
 
-
-\boldsymbol{A}
+这表示新坐标系的 $x'$ 轴是一个单位向量（长度为 1），符合直观的几何意义。
