--- a/理论物理/朗道/一、力学/第 6 章、刚体的运动.md
+++ b/理论物理/朗道/一、力学/第 6 章、刚体的运动.md
@@ -48,52 +48,32 @@
 我们将转动动能改写成张量形式，用 $\boldsymbol{r}, \boldsymbol{\Omega}$ 的分量 $x_{i}, \Omega_{i}$ 表示为$$\begin{aligned}
 T_{\text{rot}} &= \frac{1}{2} \sum m\left[\Omega_{i}^{2} x_{l}^{2}-\Omega_{i} x_{i} \Omega_{k} x_{k}\right] = \frac{1}{2} \sum m\left[\Omega_{i} \Omega_{k} \delta_{i k} x_{l}^{2}-\Omega_{i} \Omega_{k} x_{i} x_{k}\right] \\
 &= \frac{1}{2} \Omega_{i} \Omega_{k} \sum m\left(x_{l}^{2} \delta_{i k}-x_{i} x_{k}\right) .
-\end{aligned}$$
+\end{aligned}$$这里用到了恒等式 $\Omega_{i}=\delta_{ik} \Omega_{k}$，其中 $\delta_{ik}$ 是单位张量（其分量在 $i=k$ 时等于 1，在 $i \neq k$ 时等于零）。引入张量$$I_{ik}=\sum m\left(x_{l}^{2}\delta_{ik}-x_{i}x_{k}\right),\tag{32.2}$$最终可得刚体动能表达式为$$T=\frac{\mu}{2} V^{2}+\frac{1}{2} I_{ik}\Omega_{i}\Omega_{k}\tag{32.3}$$
+将 (32.3) 减去势能可得刚体的拉格朗日函数$$L=\frac{\mu V^{2}}{2}+\frac{1}{2} I_{ik}\Omega_{l}\Omega_{k}-U   \tag{32.4}$$一般情况下势能是确定刚体位置的 6 个变量的函数，例如质心的 3 个坐标 $X,Y,Z$ 和确定动坐标轴相对固定坐标轴方向的 3 个角。
+
+张量 $I_{ik}$ 称为刚体 *惯量矩张量*，或者简称刚体*惯量张量*。由定义 (32.2) 显见，它是对称的，即$$I_{ik}=I_{ki}\tag{32.5}$$
+为了清楚起见，我们将惯量张量的分量写成显式$$I_{\iota k}=\left(\begin{array}{ccc}
+\sum m\left(y^{2}+z^{2}\right) & -\sum mxy & -\sum mxz\\
+-\sum myx&\sum m\left(x^{2}+z^{2}\right) & -\sum myz\\
+-\sum mzx&-\sum mzy &\sum m\left(x^{2}+y^{2}\right)
+\end{array}\right) .\tag{32.6}$$分量 $I_{xx},I_{yy},I_{zz}$ 称为对相应坐标轴的转动惯量。
+
+显然，惯量张量可以相加，即刚体转动惯量等于其各部分转动惯量之和。
+
+如果将刚体当作连续体，则在定义 (32.2) 中的求和改为对刚体体积的积分：$$I_{i k}=\int \rho\left(x_{l}^{2} \delta_{i k}-x_{i} x_{k}\right) \mathrm{d} V .\tag{32.7}$$
+像任何二阶对称张量一样，惯量张量可以通过适当选择坐标轴 $x_{1},x_{2},x_{3}$ 的方向约化为对角的形式这些方向称为 *惯量主轴*，而惯量张量相应的对角分量称为 *主转动惯量*，用 $I_1,I_2,I_3$ 表示在这样选择坐标轴 $x_{1},x_{2},x_{3}$ 时，转动动能表示为特别简单的形式：$$T_{\text{rot}} = \frac{1}{2}\left(I_{1} \Omega_{1}^{2} + I_{2} \Omega_{2}^{2} + I_{3} \Omega_{3}^{2}\right).\tag{32.8}$$
+我们发现， 3 个主转动惯最中的每一个都不会大于另外两个之和。例如$$I_{1}+I_{2}=\sum m\left(x_{1}^{2}+x_{2}^{2}+2 x_{3}^{2}\right) \geqslant \sum m\left(x_{1}^{2}+x_{2}^{2}\right)=I_{3} .\tag{32.9}$$
+3 个主转动惯量各不相等的刚体称为*非对称陀螺*。
+
+如果两个主转动惯量相等，$I_1 = I_2 \neq l_3$，则刚体称为*对称陀螺*。在这种情况下，在平面 $x_{1}x_{2}$ 内有一个主轴方向可任意选取。
+
+如果所有 3 个主转动惯械都相等，则刚体称为*球陀螺*。在这种情况下 3 个主轴可以任意选为任何 3 个相互垂直的轴。
 
 \boldsymbol{R}
 
 
 
-这里用到了恒等式Q ＝妇几，其中妇是单位张量（其分量在i=k 时等千l ，在
-i=Fk 时等于零）．引入张量
-I,k = ~m(x 沁— X 平），
-最终可得刚体动能表达式为
-T= 止1
-2
-+ - IlkQQK.
-2
-将(32.3) 减去势能可得刚体的拉格朗日函数
-L= 丛l
-2 +— I1kQ 几－ u. 2
-(32.2)
-(32.3)
-(32.4)
-一般情况下势能是确定刚体位置的6 个变鼠的函数，例如质心的3 个坐标X,
-Y,Z 和确定动坐标轴相对固定坐标轴方向的3 个角．
-张量儿称为刚体惯量矩张量，或者简称刚体惯量张量由定义(32.2) 显见，
-它是对称的，即
-I;k = I如．（ 32.5)
-为了清楚起见，我们将惯量张量的分量写成显式
-~m(y2 + z 勹— ~mxy.:!...~mxz Ilk= —区myx 区m(x2+ z 勺— 2myz 』
-—~mzx —~mzy ~m(x2 + y勹
-(32.6)
-分量Ixx,Iyy,IZ之称为对相应坐标轴的转动惯量．
-显然，惯量张量可以相加，即刚体转动惯晕等千其各部分转动惯量之和．
-如果将刚体当作连续体，则在定义(32.2) 中的求和改为对刚体体积的积分：
-从＝ Ip(x 沁— x,xk)dV. (32.7)
-像任何二阶对称张最一样，惯量张鼠可以通过适当选择坐标轴X1'X2'X3
-的方向约化为对角的形式这些方向称为惯量主轴，而惯蜇张量相应的对角分量
-称为主转动惯量，用I1,I2,I3 表示在这样选择坐标轴X1,Xz,X3 时，转动动能
-表示为特别简单的形式：
-Trot=½(J 团＋ I 五＋ I团）． (32.8)
-我们发现， 3 个主转动惯最中的每一个都不会大于另外两个之和．例如
-I1 + I 厂~m （式＋吐＋ 2 式）多~m （叶＋式） = I3. (32.9)
-3 个主转动惯量各不相等的刚体称为非对称陀螺．
-如果两个主转动惯量相等， I1 = I2#l3 ，则刚体称为对称陀螺．在这种情况
-下，在平面x 心2 内有一个主轴方向可任意选取．
-如果所有3 个主转动惯械都相等，则刚体称为球陀螺．在这种情况下3 个主
-轴可以任意选为任何3 个相互垂直的轴．
-§ 32 惯量张量• 103 ·
+
 如果刚体具有某种对称性，确定惯最主轴就容易得多显然，质心位置和惯
 量主轴的方向应该具有与刚体相同的对称性．
 例如，如果刚体有对称面，则质心应该在该平面内．两个惯晕主轴也应该位
