--- a/理论物理/任延宇/1-4.md
+++ b/理论物理/任延宇/1-4.md
@@ -121,27 +121,26 @@
 
 但是如果我们仔细观察的话，它跟我们数学上直接介绍那个微积分还有点不太一样，因为数学里涉及到的被微分和被积分的都是数或者函数，而我们这里边的被微分或者积分的对象，是一个有大小有方向的一个矢量。那么为此我们需要把它过渡到我们会算的那个数学上的微积分，为此我们有必要引入参考系和坐标系。
 
-那么在这里边，参考系其实就是坐标原点的定义，你研究任何问题，首先要确定我们的立场或者我们的坐标原点是什么。道理很简单，比方说现在我们说原点这个物体，它有一个速度，那是因为我们坐标原点是选择在一个相对于我们的教室静止的这样一个参考系；如果你把坐标原点就选择在这个运动的物体上，那么对于它来讲，这个物体就是没有运动的，速度等于零。
+那么在这里边，*参考系其实就是坐标原点的定义*，你研究任何问题，首先要确定我们的立场或者我们的坐标原点是什么。道理很简单，比方说某个物体，它有一个速度，那是因为我们坐标原点是选择在一个相对于我们的教室静止的这样一个参考系；如果你把坐标原点就选择在这个运动的物体上，那么对于它来讲，这个物体就是没有运动的，速度等于零。
 
 原则上来讲，参考系一旦选定，这些矢量都已经被确定了，但是不要忘了，我们希望做定量计算，也就是我们希望把这些矢量变成我们在数学上习惯运算的那些数，为此我们就必须要引入坐标系。
 
-回顾一下，我们之前同学们一旦涉及到坐标系，其实都跟这个立场是有关的，比方说我们这有一个现成的矢量 $\vec{A}$，你要描述它不太容易，它既有大小又有方向。于是人们想了一个办法，我找两个比较简单的已知的矢量，比方说一个是水平的 $\vec{e_1}$，一个是竖直的 $\vec{e_2}$，那么这两个比较简单的矢量就可以构成一个二维的坐标系，我们不妨简单的看一下，好比说现在你这个待研究的矢量 $\vec{A}$ 方向的投影是基本矢量 $\vec{e_1}$ 的三倍，它竖直方向的投影是第二个基本矢量的两倍，因此我们待研究的 $\vec{A}$ 现在就可以写成这个样：$$\vec{A}=3\vec{e_1} + 2\vec{e_2}$$
+回顾一下，我们之前同学们一旦涉及到坐标系，其实都跟这个立场是有关的，比方说我们这有一个现成的矢量 $\vec{A}$，你要描述它不太容易，它既有大小又有方向。于是人们想了一个办法，我找两个比较简单的已知的矢量，比方说一个是水平的 $\vec{e}_1$，一个是竖直的 $\vec{e}_2$，那么这两个比较简单的矢量就可以构成一个二维的坐标系，我们不妨简单的看一下，好比说现在这个待研究的矢量 $\vec{A}$ 方向的投影是基本矢量 $\vec{e_1}$ 的三倍，它竖直方向的投影是第二个基本矢量的两倍，因此我们待研究的 $\vec{A}$ 就可以写成：$$\vec{A}=3\vec{e_1} + 2\vec{e_2}$$
 注意到这里边的 3 和 2，就是我们希望把 $\vec{A}$ 转变成的那个数，那么接下来我们就可以利用 3 和 2 对这个矢量来进行简单的描述了，这当然是一个好办法，只不过我们现在介绍的它是一个特例。
 
 如果同学们要一般性的研究坐标系的选择的话，线性代数告诉我们对于坐标系的要求，第一要完备；第二要线性无关。那么有些同学可能觉得这里边有点麻烦，那么线性代数这里边可能都有点忘了，没有关系，线性代数里抽象的知识落实到我们这门具体的内容，这个要求就变成了三个彼此不共面的矢量。
 
 为什么这么要求呢，因为所谓的完备就是基本矢量的个数和空间的维数相等，我们研究的一般来讲是一个三维运动的问题，因此需要三个就可以了，那么所谓的线性无关就是彼此不能互相表示，落实到我们这里，它就是不共面。
 
-那么很显然满足我们这样一个条件，三个不共面的矢量是非常非常多的，我们在处理具体问题的时候，从这无穷多的选择里选择什么样的好呢 ？那么这里边我就要提醒同学们回顾一下，我们为什么要引入坐标系，引入坐标系完全是一个数学上的、为了把矢量变成数这样一个人为的过程，大自然是不知道这样一个过程的，因此你不管采用什么样的坐标系，绝对不会影响任何有物理意义的结果。
+那么很显然满足我们这样一个条件，三个不共面的矢量是非常非常多的，我们在处理具体问题的时候，从这无穷多的选择里选择什么样的好呢？这里边就要提醒同学们回顾一下，我们为什么要引入坐标系，引入坐标系完全是一个数学上的、为了把矢量变成数的过程，大自然是不知道这样一个过程的，因此你不管采用什么样的坐标系，绝对不会影响任何有物理意义的结果。
 
-两个球碰没碰上，做的功是多少，碰上之后温度有什么样的改变，所有这些都不会因为你选择坐标系而发生改变；但是从另外一个方面，人们经过实践发现，你无论选什么坐标系都可以把矢量变成数，但这个数计算起来难度却是有差异的。你选择不同的坐标系，可能解题的难度会相差很大很大，这就决定了我们选择坐标系的原则，就是为了使我们后边求解问题更加简单，别留什么后患，那么出于这样一个原则，它就告诉我们在我们本课程里一律来取这样的坐标系，就是所谓的标准正交基。
+两个球碰没碰上，做的功是多少，碰上之后温度有什么样的改变，所有这些都不会因为你选择坐标系而发生改变；但从另外一方面，人们经过实践发现，无论选什么坐标系都可以把矢量变成数，但这个数计算起来难度却是有差异的。你选择不同的坐标系，可能解题的难度会相差很大，这就决定了我们选择坐标系的原则，就是为了使我们后边求解问题更加简单，出于这样一个原则，它就告诉我们在我们本课程里一律来取这样的坐标系，就是所谓的标准正交基。
 
 具体说来就是我们取这样三个不共面的矢量，要求这三个矢量，它的长度都是单位长度，而且彼此都是互相垂直的，那么可以简单的，如我们这样一个图示。
 
 ![[Pasted image 20250818164214.png]]
 
-那么此外，出于习惯还有一个额外的要求，就是构成所谓的右手系，第三个基本矢量恰好等于 $\vec{e_1}$ 和 $\vec{e_2}$ 的叉乘这样一个要求，如果用标准的数学公式来描述的话，就是任意两个基本矢量：
-
+此外，出于习惯还有一个额外的要求，就是构成所谓的右手系，第三个基本矢量恰好等于 $\vec{e}_1$ 和 $\vec{e}_2$ 的叉乘，如果用标准的数学公式来描述的话，就是任意两个基本矢量：
 $$\begin{align*}
 \vec{e}_i \cdot \vec{e}_j &= \delta_{ij} = 
 \begin{cases} 
@@ -152,16 +151,16 @@ $$\begin{align*}
 \end{align*}
 $$
 
-这个 $\delta_{ij}$ 看起来比较复杂，其实它的具体意义非常简单，它告诉我们，如果这两个基本矢量，它的代号 $i$ 和 $j$ 不等，它俩点积的结果当然是等于 0 的，因为它们彼此垂直；如果 $i$ 和 $j$ 是相等，说明是同一个基本矢量，既然是单位长度，点积的结果自然就是 1。
+这个 $\delta_{ij}$ 看起来比较复杂，其实它的具体意义非常简单，它告诉我们，如果两个基本矢量的代号 $i$ 和 $j$ 不等，它俩点积的结果等于 0，因为它们彼此垂直；如果 $i$ 和 $j$ 相等，说明是同一个基本矢量，点积的结果是 1。
 
 因此这样一个数学上的定义式跟我们前面关于它的一个介绍其实是一致的，我们之所以要求同学们必须用这样的坐标系，道理其实是很简单的，就是人们发现这样的坐标系在解力学问题的时候特别简单，一定比其他的比方说，不是互相垂直那个要简单得多。
 
-那么接下来我们就具体给同学们看一下，这样一个坐标系给我们带来的优惠条件是什么，比方说我们在目前这样一个标准正交基下，研究任意一个矢量 $\vec{A}$，我们希望把它变成数，那么具体这样一个求和：$$\vec{A}=A_1\vec{e_1}+A_2\vec{e_2}+A_3\vec{e_3}=\sum^3_{i=1}A_i\vec{e_i}$$
+那么接下来我们就具体给同学们看一下，这样一个坐标系给我们带来的优惠条件是什么，比方说我们在目前这样一个标准正交基下，研究任意一个矢量 $\vec{A}$，我们希望把它变成数，那么具体这样一个求和：$$\vec{A}=A_1\vec{e}_1+A_2\vec{e}_2+A_3\vec{e}_3=\sum^3_{i=1}A_i\vec{e}_i$$
 $A_1, A_2, A_3$ 是我们希望变成的数，当然这样一个直接的求和，还可以写成这种一个紧凑的形式，以上所有的过程是所有的坐标系都要进行的。
 
-那么我们现在给同学们介绍的这样一个标准的正交基，它的一个最大的好处就是这里边的数 $A_1$ 非常容易求出来，这个 $A_i$ 也就是矢量在某一个坐标轴上的分量，它就等于这个矢量本身对相应那个坐标轴的点积，那也就是等于这个矢量的模长乘上相应夹角的余旋就可以简单的求出了；$$A_i = \vec{A}\cdot\vec{e_i}$$而如果不是标准正交基，这个求解是非常麻烦的，那么感兴趣的同学可以去参考一下张量分析书上的介绍，在我们的课程 那么只介绍这样一个标准正交基。
+那么我们现在给同学们介绍的这样一个标准的正交基，它的一个最大的好处就是这里边的数 $A_i$ 非常容易求出来，这个 $A_i$ 也就是矢量在某一个坐标轴上的分量，它就等于这个矢量本身对相应那个坐标轴的点积，那也就是等于这个矢量的模长乘上相应夹角的余旋就可以简单的求出了；$$A_i = \vec{A}\cdot\vec{e_i}$$而如果不是标准正交基，这个求解是非常麻烦的，那么感兴趣的同学可以去参考一下张量分析书上的介绍，在我们的课程只介绍这样一个标准正交基。
 
-那么好，接下来我们把这两个公式联立，联立后得到了一个非常重要的结果，这个结果很简单，就是你直接把 $A_i$ 的表示形式带到刚才这个求和符号里，把 $A_i$ 替换掉就可以了。
+接下来我们把这两个公式联立，得到一个非常重要的结果，这个结果很简单，就是你直接把 $A_i$ 的表示形式带到刚才这个求和符号里，把 $A_i$ 替换掉就可以了。
 $$\vec{A} = \sum^3_{i=1}\vec{A}\cdot \vec{e_i}\vec{e_i}$$
 这个公式是贯穿我们牛顿力学始终的，特别是到第三章，它就作为一个最基本的计算公式。
 
@@ -177,4 +176,4 @@ $$\vec{A} = \sum^3_{i=1}\vec{A}\cdot \vec{e_i}\vec{e_i}$$
 
 那么这样利用这个关系，我们就成功的把它变成了关于数的计算，有同学说，这样一个结果犯不上这样大费周章，我们之前早就知道。那么这节课我要告诉同学们的是，这个公式的成立是有前提的，这个前提也是这个关系它所成立的前提，那就是标准正交基。如果这个坐标系是一个斜角的坐标系，这个关系就要变得复杂的多，你要引入协变或者逆变矢量，关于这些问题感兴趣的同学可以参考一下张量分析的书籍，好，以上是我们对第一道例题的讲解。
 
-好，接下来这个例题，我们给同学们复习一下，所谓的笛卡尔坐标系。介绍这道例题的主要目的是介绍一下，我们这门课它的一些符号规则，这些规则是很重要的。那么笛卡尔坐标系它的特点是，它的三个基底永远不会随着时间变化，也就是说它的方向是对于绝对空间来讲固定不变的，那么因此人们赋予这三个基底的名称为 $\vec{i}, \vec{j}, \vec{k}$，也就是说它的第一个基底赋予它 $\vec{e}_1 \equiv \vec{i}$，第二个基底赋予它 $\vec{e}_2 \equiv \vec{j}$，第三个赋予它名字为 $\vec{e}_3 \equiv \vec{k}$，这是笛卡尔坐标系所独有的优惠待遇，那么接下来根据我们讲过的完备性关系，好比现在是某一个质点的位置矢量 $\vec{r}$，我们可以把它套上这样一个求和的外套。$$\vec{r} = \sum^3_{i=1}\vec{r}\cdot \vec{e}_i \cdot \vec{e}_i=\vec{r}\cdot \vec{i}\cdot \vec{i}+\vec{r}\cdot \vec{j}\cdot \vec{j}+\vec{r}\cdot \vec{k}\cdot \vec{k}$$现在这个公式是普遍成立的，我们把 $\vec{e}_i$ 换成笛卡尔坐标系的 $\vec{i}, \vec{j}, \vec{k}$，那么于是我们就可以得到这个求和，好，观察一下这个结果，现在 $\vec{r}$ 和 $\vec{i}$ 的点积，这是一个数，这个数是笛卡尔坐标系下同样是独有的结果，我们赋予它 $x$，同样道理这个数我们赋予它 $y$，这个我们赋予它 $z$，换句话说以后在我们的课程里，一旦出现 $xyz$，这意味着它一定是笛卡尔坐标系下的分量。$$\vec{r}=x\vec{i} + y\vec{j}+z\vec{k}$$好，以上是对于位置矢量 $\vec{r}$ 的书写，如果我们接下来在运动学里要计算速度，那么速度矢量它应该等于位置矢量对时间的导数，那么接下来这个求导的计算就可以立刻看出笛卡尔坐标系的优点，因为我们已经介绍过，这个基本矢量 $\vec{i}, \vec{j}, \vec{k}$ 不会随时间变化，因此这个求导只需要在分量 $x,y,z$ 上加点就可以了$$\vec{v}=\dot{\vec{r}}=\dot{x}\vec{i} + \dot{y}\vec{j}+\dot{z}\vec{k}$$同样道理加速度无非是在这，再对时间求一次导数，那么同样道理只需要还在分量 $xyz$ 上再加一个点就可以计算出来，$$\vec{a}=\ddot{\vec{r}}=\ddot{x}\vec{i} + \ddot{y}\vec{j}+\ddot{z}\vec{k}$$这些计算完全体现了我们选笛卡尔坐标系作为坐标系的优点，它十分方便我们的计算，但是人们同时也发现并不是所有的题目它都是最方便的，为此人们还要引入一些其他的坐标系，那么这些坐标系我们会在下次课再给同学们去介绍。好，我们今天的课程就上到这里。
+接下来这个例题，我们给同学们复习一下，所谓的笛卡尔坐标系。介绍这道例题的主要目的是介绍一下，我们这门课它的一些符号规则，这些规则是很重要的。*笛卡尔坐标系的特点是，它的三个基底永远不会随着时间变化，也就是说它的方向是对于绝对空间来讲固定不变的*，那么因此人们赋予这三个基底的名称为 $\vec{i}, \vec{j}, \vec{k}$，也就是说它的第一个基底赋予它 $\vec{e}_1 \equiv \vec{i}$，第二个基底赋予它 $\vec{e}_2 \equiv \vec{j}$，第三个赋予它名字为 $\vec{e}_3 \equiv \vec{k}$，这是笛卡尔坐标系所独有的优惠待遇，接下来根据我们讲过的完备性关系，好比现在是某一个质点的位置矢量 $\vec{r}$，我们可以把它套上这样一个求和的外套。$$\vec{r} = \sum^3_{i=1}\vec{r}\cdot \vec{e}_i \cdot \vec{e}_i=\vec{r}\cdot \vec{i}\cdot \vec{i}+\vec{r}\cdot \vec{j}\cdot \vec{j}+\vec{r}\cdot \vec{k}\cdot \vec{k}$$现在这个公式是普遍成立的，我们把 $\vec{e}_i$ 换成笛卡尔坐标系的 $\vec{i}, \vec{j}, \vec{k}$，那么于是我们就可以得到这个求和，好，观察一下这个结果，现在 $\vec{r}$ 和 $\vec{i}$ 的点积，这是一个数，这个数是笛卡尔坐标系下同样是独有的结果，我们赋予它 $x$，同样道理这个数我们赋予它 $y$，这个我们赋予它 $z$，换句话说以后在我们的课程里，一旦出现 $xyz$，这意味着它一定是笛卡尔坐标系下的分量。$$\vec{r}=x\vec{i} + y\vec{j}+z\vec{k}$$好，以上是对于位置矢量 $\vec{r}$ 的书写，如果我们接下来在运动学里要计算速度，那么速度矢量它应该等于位置矢量对时间的导数，那么接下来这个求导的计算就可以立刻看出笛卡尔坐标系的优点，因为我们已经介绍过，这个基本矢量 $\vec{i}, \vec{j}, \vec{k}$ 不会随时间变化，因此这个求导只需要在分量 $x,y,z$ 上加点就可以了$$\vec{v}=\dot{\vec{r}}=\dot{x}\vec{i} + \dot{y}\vec{j}+\dot{z}\vec{k}$$同样道理，加速度无非是再对时间求一次导数，那么同样道理只需要还在分量 $xyz$ 上再加一个点就可以计算出来，$$\vec{a}=\ddot{\vec{r}}=\ddot{x}\vec{i} + \ddot{y}\vec{j}+\ddot{z}\vec{k}$$这些计算完全体现了我们选笛卡尔坐标系作为坐标系的优点，它十分方便我们的计算，但是人们同时也发现并不是所有的题目它都是最方便的，为此人们还要引入一些其他的坐标系，那么这些坐标系我们会在下次课再给同学们去介绍。好，我们今天的课程就上到这里。
