--- a/理论物理/任延宇/1-4.md
+++ b/理论物理/任延宇/1-4.md
@@ -1,5 +1,4 @@
 
-
 ## 一、什么是理论力学
 
 各位同学们好，欢迎大家进入理论力学这门课程的学习，在我们这门课的叙论部分，主要讨论三个内容：
@@ -103,7 +102,7 @@
 
 那么接下来给大家简单复习一下其中的一些基本内容和概念，那么特别是容易出错的一些部分，比方说我们都知道，你要研究质点的运动学，显然要考虑它的位移、速度和加速度。那么好，比说现在有一个质点从 $A$ 运动到了 $B$，那么一开始它处于 $A$ 点的时候，位置矢量是 $\vec{r}_1$，到了 $B$ 点位置矢量变成了 $\vec{r}_2$。那么这两个矢量的矢量差就构成了所谓的位移矢量 $\Delta \vec{r}$。
 
-![[Pasted image 20250815115044.png]]
+![[fig1.png]]
 
 那么容易混淆的是什么呢，它从 $A$ 经过 $B$ 还走过了一个路程，这个路程的长度我们用弧长 $\Delta S$ 来表示，很显然这两个长度本身是不一样的，也就是说一般来讲，这个位移矢量的大小要比路程这个 $\Delta S$ 稍微小一些，除非是你取极限的情况下，比方说你经过的时间认为是无穷小，这样的时候可以认为这个$\mathrm{d}S$ 是等于 $\mathrm{d}\vec{r}$ 这个模长这样一个绝对值。
 
@@ -138,7 +137,7 @@
 
 具体说来就是我们取这样三个不共面的矢量，要求这三个矢量，它的长度都是单位长度，而且彼此都是互相垂直的，那么可以简单的，如我们这样一个图示。
 
-![[Pasted image 20250818164214.png]]
+![[fig2.png]]
 
 此外，出于习惯还有一个额外的要求，就是构成所谓的右手系，第三个基本矢量恰好等于 $\vec{e}_1$ 和 $\vec{e}_2$ 的叉乘，如果用标准的数学公式来描述的话，就是任意两个基本矢量：
 $$\begin{align*}
