--- a/理论物理/任延宇/理论力学.md
+++ b/理论物理/任延宇/理论力学.md
@@ -64,15 +64,15 @@ $$\vec{r}=r\vec{e}_r$$
 
 ## 六、自然坐标系
 
-各位同学们好，这堂课我们来讲自然坐标系，自然坐标系它有一些特点，首先一般来讲，采用这个坐标系往往要求它的轨道是已知的；另外这个自然坐标系非常容易犯一些小错误，需要我们同学在使用的时候注意。
+各位同学们好，这堂课我们来讲自然坐标系，自然坐标系它有一些特点，首先一般来讲，采用这个坐标系往往 *要求它的轨道是已知的*；另外这个自然坐标系非常容易犯一些小错误，需要我们同学在使用的时候注意。
 
-那么接下来，我们先来介绍一下最简单的二维情况下它的基本矢量是如何选取的，比方说我们已经知道现在质点做一个二维运动，它的运动轨迹是如下一个曲线，当前质点处于红点这样一个位置，其中这个自然坐标系，它的第一个基本矢量，我们就选择在它的切向上，也就是所谓的单位切向量，当然严格来讲，这个方向有两个，还可以跟这个方向相反，那么人们规定，相应我们把这个方向就选在直点前进的方向，也就这个时候，意味着这个质点是往上走的；
+接下来，我们先介绍一下最简单的二维情况下它的基本矢量是如何选取的，比方说我们已经知道现在质点做一个二维运动，它的运动轨迹是如下一个曲线，当前质点处于红点这样一个位置，其中这个自然坐标系，它的第一个基本矢量，我们就选择在它的切向上，也就是所谓的 *单位切向量*，当然严格来讲，这个方向有两个，还可以跟这个方向相反，那么人们规定，相应我们把这个方向就选在质点前进的方向，也就这个时候，意味着这个质点是往上走的；
 
-那么第二个基本史量就没什么可说的，一定是选择在它的法线方向，人们把这个方向或者这个基本矢量称为单位法线向量或者单位主法线向量，那么严格来讲，这个方向也有两个，人们规定它具体是指向这个曲线的凹侧，也就是如图我们所画的这样一个方向。
+那么第二个基本矢量就没什么可说的，一定是选择在它的法线方向，人们把这个方向或者这个基本矢量称为单位法线向量或者*单位主法线向量*，严格来讲，这个方向也有两个，人们规定它具体是指向这个曲线的凹侧，也就是如图我们所画的这样一个方向。
 
-那么接下来自然坐标系的关键就是关于这个质点的速度、加速度等等，都很严格的依赖于这个曲线的特点，那么因此我们先来总结一下，影响这样一个平面曲线它的形状参量都有哪些，其中第一个很重要的参量就是这个单位切向量，$$\vec{e}_{t}=\frac{\mathrm{d}\vec{r}}{|\mathrm{d}\vec{r}|}=\frac{\mathrm{d}\vec{r}}{\mathrm{d}s}$$
+接下来自然坐标系的关键就是关于这个质点的速度、加速度等等，都很严格的依赖于这个曲线的特点，那么因此我们先来总结一下，影响这样一个平面曲线它的形状参量都有哪些，其中第一个很重要的参量就是这个单位切向量，$$\vec{e}_{t}=\frac{\mathrm{d}\vec{r}}{|\mathrm{d}\vec{r}|}=\frac{\mathrm{d}\vec{r}}{\mathrm{d}s}$$
 当然它在数学上对此有严格的定义，分母这个 $|\mathrm{d}\vec{r}|$， 当然也可以写成 $\mathrm{d}s$，这个定义它是很好理解的，那么首先它的方向由 $\mathrm{d}\vec{r}$ 这个矢量决定，决定了它就是去前进的切向方向，那么这样一个除法，它保证了它的模长是 1。$$\vec{e}_{n}=\frac{\mathrm{d}\vec{e}_{t}}{\mathrm{d}\theta}$$
-相应第二个基本矢量，法线方向，数学上也有严格的定义，当然你可以查数学书去重温一下这个定义，但是对于我们来讲啊，用不着这么麻烦，大家可以回想一下我们上节课讲过那个平面极坐标系跟这个是很像的。比方说我现在也画一个方向固定的轴，这个轴的地位就相当于我们平面极坐标系里那个极轴， 那么相应这个分母这个 $\theta$ 角，就是这个固定方向的轴跟切向的夹角。那么同学们可能想到了，眼前这幅图像跟我们上堂课那个平面极坐标系的图像，其实本质是一致的，那么因此我们可以借助之前平面极坐标系的结果，可以直接理解法向这个定义。$$\rho=\frac{\mathrm{d}s}{\mathrm{d}\theta}$$
+相应第二个基本矢量，法线方向，数学上也有严格的定义，当然你可以查数学书去重温一下这个定义，但是对于我们来讲啊，用不着这么麻烦，大家可以回想一下我们上节课讲过那个平面极坐标系跟这个是很像的。比方说我现在也画一个方向固定的轴，这个轴的地位就相当于我们平面极坐标系里那个极轴，那么相应分母这个 $\theta$ 角，就是这个固定方向的轴跟切向的夹角。那么同学们可能想到了，眼前这幅图像跟我们上堂课那个平面极坐标系的图像，其实本质是一致的，那么因此我们可以借助之前平面极坐标系的结果，可以直接理解法向这个定义。$$\rho=\frac{\mathrm{d}s}{\mathrm{d}\theta}$$
 最后一个参量，就是著名的曲率半径，它也很重要，它的定义如上，那么讲到这儿同学们要稍微小心一点，这里边它的一些结果是依赖于这个曲线的画法的。我们图中这个曲线它有一个特点，就是它在下一个时刻这个 $\theta$ 角会略微的增大，也就是当前它的 $\mathrm{d}\theta>0$，如果换成另外一种情况，可能相应的结果就未必是这样。
 
 比方说还有一种情况，它下一步的 $\mathrm{d}\theta < 0$，比方说，它如果沿着我们图中这个红线继续往前走的话，其他什么都不变，也是当前这个位置，那么相应的结果我们来看一下。首先单位切向量没有任何变化，它还是沿着刚才那个切向，因为我们这里要求这个红线和黑线彼此是相切的；
@@ -96,11 +96,11 @@ $$\vec{r}=r\vec{e}_r$$
 &=\dot{v}\vec{e}_{t}+ \frac{v^2}{\rho}\vec{e}_{n}
 \end{align}$$那么接下来这个乘积，同学们可以看到，不论 $\mathrm{d}\theta$ 的变化趋势如何，这个最后的乘积总是正的，于是不论哪种情况，都会得到同样一个加速度，它最后的结果。 
 
-好，以上就是对于加速度的一个简单的计算，这样一来 我们就得到了加速度在自然坐标系下切向和法向的分量的表示形式，这里边涉及到一个曲率半径它的计算，也就是 $ρ$ 的计算，这里边我们可以给大家展示一下，在不同的平面曲线，它给出的表达式下具体这个 $ρ$ 是如何计算，当然，这个表达式很复杂，不要求同学们去掌握，在考试或者做题的时候，我会直接告诉同学们，也就是这个结果，大家可以直接的去使用。
+好，以上就是对于加速度的一个简单的计算，这样一来，我们就得到了加速度在自然坐标系下切向和法向的分量的表示形式，这里边涉及到一个曲率半径它的计算，也就是 $ρ$ 的计算，这里边我们可以给大家展示一下，在不同的平面曲线，它给出的表达式下具体这个 $ρ$ 是如何计算，当然，这个表达式很复杂，不要求同学们去掌握，在考试或者做题的时候，我会直接告诉同学们，也就是这个结果，大家可以直接的去使用。
 
 好，我们刚才所有讨论的结果都是简单的在二维平面上的一个曲线，接下来，我们尝试把刚才的结果推广到一般的三维情况下，为了完成这个推广，首先我们在刚才所述的知识上再规定一些概念：
 
-首先是密切平面的概念，它是这两个基本矢量所构成的那个平面，换句话说，我们刚才对于二维的讨论都可以认为是在密切平面上来进行的，接下来既然要研究三维，我们当然还需要另外一个基本矢量，它没有什么可以选择的，对于右手系来讲，它就应该等于前两个基本矢量叉乘的结果，对于这个矢量对应的，我们称之为 $\vec{e}_{b}$，也就是所谓的单位副法线的向量。
+首先是密切平面的概念，它是这两个基本矢量所构成的那个平面，换句话说，我们刚才对于二维的讨论都可以认为是在密切平面上来进行的，接下来既然要研究三维，我们当然还需要另外一个基本矢量，它没有什么可以选择的，对于右手系来讲，它就应该等于前两个基本矢量叉乘的结果，对于这个矢量对应的，我们称之为 $\vec{e}_{b}$，也就是所谓的 *单位副法线向量*。
 
 很显然，关于速度和加速度的分量，我们没有必要再去计算了，因为刚才所有的结果都是成立的，也就是说，速度和加速度在第三个方向上没有任何的分量，在我们这个图里，其实第三个方向是垂直于这个屏幕向外的，它的第三个方向分量结果等于零，相应的我们就可以直接写出它的结果，但是不要忘了，这其实还是一个二维的运动，因为这个曲线还是一个二维的曲线，只不过我们形式上加上了第三个坐标轴而已。
 
