--- a/理论物理/朗道/一、力学/第 2 章、守恒定律.md
+++ b/理论物理/朗道/一、力学/第 2 章、守恒定律.md
@@ -161,46 +161,27 @@ M_{z}&=mr^{2}\dot{\varphi}\sin ^{2}\theta, \\[1.2ex]
 M^{2}&=m^{2}r^{4}\left(\dot{\theta}^{2}+\dot{\varphi}^{2}\sin ^{2}\theta\right) .
 \end{align}
 $$
-**习题 3**  在下列场中运动时动量P 和角动量M 的哪些分量守恒？
-a. 无限大均匀平面场．
-答案：
-Px,Py,M之（元限大平面为xy 平面）．
-b. 无限长均匀圆柱场．
-答案：
-尺， M乏（圆柱轴为z 轴）．
-c. 无限长均匀棱柱场．
-答案：
-尺（棱边平行于z 轴）．
-d. 两个点场．
-答案：
-M之（两个点位于z 轴上）．
-e. 无限大均匀半平面场．
-答案：
-Py （无限大半平面是xy 平面上以y 轴为界的）．
-f. 均匀圆锥场．
-答案：
-矶（圆锥轴为z 轴）．
-g. 均匀圆环场．
-答案：
-M之（圆环轴为z 轴）．
-h. 无限长均匀圆柱形螺旋线场．
-· 21 ·
-h
-解：绕螺旋轴(z 轴）旋转砰同时沿着该轴平移一砰(h 为螺距），拉格朗日
-2 六
-函数不改变．所以有
-3L 3L. h · aL ＝五沁＋五行＝ （ E 云＋ Mz) 砰＝ 0,
-由此可得
-· 22 · 第二章守恒定律
-h P — +Mz = const.
-z 2 兀
-§ 10 力学相似性
-拉格朗日函数乘以任意常数不会改变运动方程（参见§2) ．在一些重要情况
-下，利用这一点，无需实际求解运动方程就可以得到有关运动性质的一些有用的
-结论
-这些情况包括那些势能是坐标的齐次函数的情况，即势能函数满足条件
-LJ (ar 1, ar 2, · · ·, ar n) = a 们(r1,r2,···,rn), (10.1)
-其中a 是任意常数， k 是函数的齐次次数．
+
+\boldsymbol{M}
+
+
+**习题 3**  在下列场中运动时动量 $\boldsymbol{P}$ 和角动量 $\boldsymbol{M}$ 的哪些分量守恒？
+
+a. 无限大均匀平面场。**答案：** $P_{x},P_y,M_z$（无限大平面为 $xy$ 平面）
+b. 无限长均匀圆柱场。**答案：** $P_{z}, M_{z}$（圆柱轴为 $z$ 轴）
+c. 无限长均匀棱柱场。**答案：** $P_{z}$（棱边平行于 $z$ 轴）
+d. 两个点场。**答案：** $M_z$（两个点位于 $z$ 轴上）
+e. 无限大均匀半平面场。**答案：** $P_{y}$ （无限大半平面是 $xy$ 平面上以 $y$ 轴为界的）
+f. 均匀圆锥场。**答案：** $M_{z}$（圆锥轴为 $z$ 轴）
+g. 均匀圆环场。**答案：** $M_{z}$（圆环轴为 $z$ 轴）
+h. 无限长均匀圆柱形螺旋线场。
+**解：** 绕螺旋轴（$z$ 轴）旋转 $\delta \varphi$ 同时沿着该轴平移 $\frac{h}{2 \pi}\delta \varphi$ （$h$ 为螺距），拉格朗日函数不改变。所以有$$\delta L=\frac{\partial L}{\partial z}\delta z+\frac{\partial L}{\partial\varphi}\delta\varphi=\left(\dot{P}_{z}\frac{h}{2\pi}+\dot{M}_{z}\right)\delta\varphi=0$$由此可得$$P_{z}\frac{h}{2\pi}+M_{z}=\mathrm{const}$$
+## 10、力学相似性
+
+拉格朗日函数乘以任意常数不会改变运动方程（参见 §2）。在一些重要情况下，利用这一点，无需实际求解运动方程就可以得到有关运动性质的一些有用的结论。
+
+这些情况包括那些势能是坐标的齐次函数的情况，即势能函数满足条件$$U\left(\alpha\boldsymbol{r}_{1},\alpha\boldsymbol{r}_{2},\cdots,\alpha\boldsymbol{r}_{n}\right)=\alpha^{k} U\left(\boldsymbol{r}_{1},\boldsymbol{r}_{2},\cdots,\boldsymbol{r}_{n}\right)\tag{10.1}$$其中 $\alpha$ 是任意常数， $k$ 是函数的齐次次数。
+
 我们引入变换，使坐标都变为a 倍，时间变为p 倍：
 ra~ara't~(3t.
 这时所有速度Va= draldt 变为al(3 倍，动能变为a2 ／矿倍，势能变为ak 倍．如
