--- a/理论物理/朗道/一、力学/第 6 章、刚体的运动.md
+++ b/理论物理/朗道/一、力学/第 6 章、刚体的运动.md
@@ -49,10 +49,10 @@
 T_{\text{rot}} &= \frac{1}{2} \sum m\left[\Omega_{i}^{2} x_{l}^{2}-\Omega_{i} x_{i} \Omega_{k} x_{k}\right] = \frac{1}{2} \sum m\left[\Omega_{i} \Omega_{k} \delta_{i k} x_{l}^{2}-\Omega_{i} \Omega_{k} x_{i} x_{k}\right] \\
 &= \frac{1}{2} \Omega_{i} \Omega_{k} \sum m\left(x_{l}^{2} \delta_{i k}-x_{i} x_{k}\right) .
 \end{aligned}$$这里用到了恒等式 $\Omega_{i}=\delta_{ik} \Omega_{k}$，其中 $\delta_{ik}$ 是单位张量（其分量在 $i=k$ 时等于 1，在 $i \neq k$ 时等于零）。引入张量$$I_{ik}=\sum m\left(x_{l}^{2}\delta_{ik}-x_{i}x_{k}\right),\tag{32.2}$$最终可得刚体动能表达式为$$T=\frac{\mu}{2} V^{2}+\frac{1}{2} I_{ik}\Omega_{i}\Omega_{k}\tag{32.3}$$
-将 (32.3) 减去势能可得刚体的拉格朗日函数$$L=\frac{\mu V^{2}}{2}+\frac{1}{2} I_{ik}\Omega_{l}\Omega_{k}-U   \tag{32.4}$$一般情况下势能是确定刚体位置的 6 个变量的函数，例如质心的 3 个坐标 $X,Y,Z$ 和确定动坐标轴相对固定坐标轴方向的 3 个角。
+将 (32.3) 减去势能可得刚体的拉格朗日函数$$L=\frac{\mu V^{2}}{2}+\frac{1}{2} I_{ik}\Omega_{i}\Omega_{k}-U   \tag{32.4}$$一般情况下势能是确定刚体位置的 6 个变量的函数，例如质心的 3 个坐标 $X,Y,Z$ 和确定动坐标轴相对固定坐标轴方向的 3 个角。
 
 张量 $I_{ik}$ 称为刚体 *惯量矩张量*，或者简称刚体*惯量张量*。由定义 (32.2) 显见，它是对称的，即$$I_{ik}=I_{ki}\tag{32.5}$$
-为了清楚起见，我们将惯量张量的分量写成显式$$I_{\iota k}=\left(\begin{array}{ccc}
+为了清楚起见，我们将惯量张量的分量写成显式$$I_{i k}=\left(\begin{array}{ccc}
 \sum m\left(y^{2}+z^{2}\right) & -\sum mxy & -\sum mxz\\
 -\sum myx&\sum m\left(x^{2}+z^{2}\right) & -\sum myz\\
 -\sum mzx&-\sum mzy &\sum m\left(x^{2}+y^{2}\right)
@@ -61,56 +61,38 @@ T_{\text{rot}} &= \frac{1}{2} \sum m\left[\Omega_{i}^{2} x_{l}^{2}-\Omega_{i} x_
 显然，惯量张量可以相加，即刚体转动惯量等于其各部分转动惯量之和。
 
 如果将刚体当作连续体，则在定义 (32.2) 中的求和改为对刚体体积的积分：$$I_{i k}=\int \rho\left(x_{l}^{2} \delta_{i k}-x_{i} x_{k}\right) \mathrm{d} V .\tag{32.7}$$
-像任何二阶对称张量一样，惯量张量可以通过适当选择坐标轴 $x_{1},x_{2},x_{3}$ 的方向约化为对角的形式这些方向称为 *惯量主轴*，而惯量张量相应的对角分量称为 *主转动惯量*，用 $I_1,I_2,I_3$ 表示在这样选择坐标轴 $x_{1},x_{2},x_{3}$ 时，转动动能表示为特别简单的形式：$$T_{\text{rot}} = \frac{1}{2}\left(I_{1} \Omega_{1}^{2} + I_{2} \Omega_{2}^{2} + I_{3} \Omega_{3}^{2}\right).\tag{32.8}$$
+像任何二阶对称张量一样，惯量张量可以通过适当选择坐标轴 $x_{1},x_{2},x_{3}$ 的方向约化为对角的形式。这些方向称为 *惯量主轴*，而惯量张量相应的对角分量称为 *主转动惯量*，用 $I_1,I_2,I_3$ 表示在这样选择坐标轴 $x_{1},x_{2},x_{3}$ 时，转动动能表示为特别简单的形式：$$T_{\text{rot}} = \frac{1}{2}\left(I_{1} \Omega_{1}^{2} + I_{2} \Omega_{2}^{2} + I_{3} \Omega_{3}^{2}\right).\tag{32.8}$$
 我们发现， 3 个主转动惯最中的每一个都不会大于另外两个之和。例如$$I_{1}+I_{2}=\sum m\left(x_{1}^{2}+x_{2}^{2}+2 x_{3}^{2}\right) \geqslant \sum m\left(x_{1}^{2}+x_{2}^{2}\right)=I_{3} .\tag{32.9}$$
 3 个主转动惯量各不相等的刚体称为*非对称陀螺*。
 
 如果两个主转动惯量相等，$I_1 = I_2 \neq l_3$，则刚体称为*对称陀螺*。在这种情况下，在平面 $x_{1}x_{2}$ 内有一个主轴方向可任意选取。
 
-如果所有 3 个主转动惯械都相等，则刚体称为*球陀螺*。在这种情况下 3 个主轴可以任意选为任何 3 个相互垂直的轴。
+如果所有 3 个主转动惯量都相等，则刚体称为*球陀螺*。在这种情况下 3 个主轴可以任意选为任何 3 个相互垂直的轴。
+
+如果刚体具有某种对称性，确定惯量主轴就容易得多。显然，质心位置和惯量主轴的方向应该具有与刚体相同的对称性。
+
+例如，如果刚体有对称面，则质心应该在该平面内．两个惯量主轴也应该位于该平面内，而第 3 个主轴垂直该平面。对于这种情况，最明显的例子是平面质点系。这种情况下 3 个主转动惯量之间存在简单的关系。如果以系统所在平面为 $x_{1}x_{2}$ 平面，则由于对所有质点 $x_{3}=0$，故$$I_{1}=\sum mx_{2}^{2},\quad I_{2}=\sum mx_{1}^{2},\quad I_{3}=\sum m\left(x_{1}^{2}+x_{2}^{2}\right)$$因此$$I_{3}=I_{1}+I_{2}\tag{32.10}$$
+如果刚体有某阶的对称轴，则质心应该位于该轴上。惯量主轴之一与此轴重合，另外两个则与之垂直，如果对称轴的阶数大于 2 ，则刚体为对称陀螺。事实上，垂直于对称轴的任一主轴可以绕该对称轴旋转一个不等于 180° 的角度，即这组垂直轴的选取不是唯一的，而这只有当刚体是对称陀螺时才能如此。
+
+位于一条直线上的质点系是一个特殊情况，如果选择这个直线为 $x_{3}$ 轴，则对于所有质点 $x_{1}x_{2}=0$，因此两个主转动惯量相等，第 3 个为零：$$I_{1}=I_{2}=\sum mx_{3}^{2},\quad I_{3=0}\tag{32.11}$$这种系统称为 *转子*。区别于其它刚体的特性是，转子仅有两个（不是 3 个）转动自由度，相应于绕 $x_{1}$ 和 $x_{2}$ 的转动，显然，论及直线绕自身的转动是没有意义的。
+
+最后，再做一个关于惯量张量计算的说明。虽然我们是在原点为质心的坐标系中定义这个张量的（只有在这个定义下基本公式 (32.3) 才成立），但是对于这个张量的计算，有时可能更为方便的是先计算相对另一个坐标原点 $O'$ 定义的类似张量$$I_{ik}^{\prime}=\sum m\left(x_{l}^{\prime 2}\delta_{i k}-x_{i}^{\prime} x_{k}^{\prime}\right) .$$如果距离 $OO'$ 由矢量 $\boldsymbol{a}$ 表示，则 $\boldsymbol{r}=\boldsymbol{r}'+\boldsymbol{a},x_{i}=x_{i}'+a_{i}$，考虑到按照 $O$ 点的定义，$\sum m \boldsymbol{r}=0$，我们得$$I_{i k}^{\prime}=I_{i k}+\mu\left(a^{2}\delta_{i k}-a_{i}a_{k}\right) .\tag{32.12}$$按这个公式，知道 $I_{i k}^{\prime}$ 就很容易计算出 $I_{i k}$。
+
+### 习题
+
+**习题 1** 将分子看作质点之间距离不变的系统，在下列情况下，试求分子的主转动惯量。
+
+a) 分子由位于一条直线上的原子构成。
+
+**答案：**$$I_{1}=I_{2}=\frac{1}{\mu}\sum_{a\neq b}m_{a}m_{b}l_{ab}^{2},\quad I_{3}=0,$$
+
+
+
 
 \boldsymbol{R}
 
 
 
-
-如果刚体具有某种对称性，确定惯最主轴就容易得多显然，质心位置和惯
-量主轴的方向应该具有与刚体相同的对称性．
-例如，如果刚体有对称面，则质心应该在该平面内．两个惯晕主轴也应该位
-千该平面内，而第3 个主轴垂直该平面对千这种情况，最明显的例子是平面质
-点系这种情况下3 个主转动惯量之间存在简单的关系如果以系统所在平面为
-X 卢2 平面，则由千对所有质点X3 =O ，故
-11 =区mx~, 12 =区mxi, l3=~m(xf+ 乌），
-因此
-l3=l1+I2. (32.10)
-如果刚体有某阶的对称轴，则质心应该位于该轴上．惯鼠主轴之一与此轴重
-合，另外两个则与之垂直．如果对称轴的阶数大于2 ，则刚体为对称陀螺．事实
-上，垂直于对称轴的任一主轴可以绕该对称轴旋转一个不等于180° 的角度，即
-这组垂直轴的选取不是唯一的，而这只有当则体是对称陀螺时才能如此．
-位于一条直线上的质点系是一个特殊情况．如果选择这个直线为X3 轴，则
-对于所有质点x 尸X2 = 0 ，因此两个主转动惯量相等，第3 个为零：
-I1=I2=~mx§, l3=0. (32.11)
-这种系统称为转子．区别千其它刚体的特性是，转子仅有两个（不是3 个）转动自
-由度，相应千绕X1 和X2 的转动，显然，论及直线绕自身的转动是没有意义的．
-最后，再做一个关于惯量张量计算的说明．虽然我们是在原点为质心的坐标
-系中定义这个张量的（只有在这个定义下基本公式(32.3) 才成立），但是对于这
-个张噩的计算，有时可能更为方便的是先计算相对另一个坐标原点01 定义的类
-似张量
-I;k = ~m(x 尸伈－ x石）
-如果距离001 由矢最a 表示，则r = r1 + a, x; = x; + a, ，考虑到按照0 点的定
-义，艺mr=O ，我们得
-几＝ I,k + μ(a2 釭－ apk) ·
-按这个公式，知道儿就很容易计算出I正
-习题
-(32.12)
-习题1 将分子看作质点之间距离不变的系统，在下列情况下，试求分子的
-主转动惯量．
-a) 分子由位于一条直线上的原子构成．
-答案：
-1
-I1 = I2 =—区mamb心，儿＝ 0,
-μ ac/cb
-• 104 · 第六章刚体的运动
 其中ma 是笫a 个原子的质量， lab 是原子a 和b 之间的距离，求和是对分子中的
 所有原子对进行的，每个原子对a 和b 的值在求和中仅出现一次．
 对于双原子分子，求和中只有一项，结果是显然
